--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
 
 # command to run tests
 script:
-  - coverage run setup.py test
+  - coverage run --source=pyscriptic setup.py test
 
 # command to notify coveralls
 after_success:
